add "delete item" endpoint with docs
